# speedy-streamer

./: .dockerignore  .travis.yml  Cargo.toml  LICENSE.txt  Makefile  README.md  cap_description.in  client.py  dockerfile  rfid_reader.cpp
.cargo/: config
cap/: kill.sh  start  version
src/: main.rs  receiver.rs
src/models/: message.rs  mod.rs
src/workers/: client.rs  client_connector.rs  client_pool.rs  mod.rs  pipe_reader.rs
