[package]
name = "speedy-streamer"
version = "0.1.0"
authors = ["iwismer <isaac@iwismer.ca>"]
edition = "2018"

[dependencies]
futures = "0.3.17"
tokio = { version = "1.12.0", features = ["net", "io-util", "rt", "fs", "signal", "macros", "sync", "rt-multi-thread"] }

[[bin]]
name = "streamer"
path = "src/main.rs"

[[bin]]
name = "receiver"
path = "src/receiver.rs"
